[gd_scene load_steps=9 format=3 uid="uid://bbmn8kr4st0u6"]

[ext_resource type="Texture2D" uid="uid://dgcw0vs3drey1" path="res://assets/background.png" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Buttons/VioletGenerator/VioletGenerator.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://nwbl03ueqyor" path="res://scenes/Buttons/RedGenerator/RedGenerator.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/Buttons/Reset/Reset.tscn" id="4"]
[ext_resource type="Script" path="res://scenes/Buttons/RedGenerator/RedGenerator.gd" id="4_5whpg"]
[ext_resource type="Script" path="res://scenes/Menu/Menu.gd" id="5"]
[ext_resource type="Script" path="res://scenes/Buttons/VioletGenerator/VioletGenerator.gd" id="6_bfun8"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1519.98, 67.3924)

[node name="Menu" type="Node2D"]
script = ExtResource("5")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(578.464, 323.633)
scale = Vector2(3.5971, 3.2109)
texture = ExtResource("1")

[node name="RedGenerator" parent="." instance=ExtResource("3")]
offset_left = 204.0
offset_top = 10.0
offset_right = 332.0
offset_bottom = 138.0
script = ExtResource("4_5whpg")

[node name="VioletGenerator" parent="." instance=ExtResource("2")]
offset_left = 681.0
offset_top = 3.0
offset_right = 809.0
offset_bottom = 131.0
script = ExtResource("6_bfun8")

[node name="Reset" parent="." instance=ExtResource("4")]
offset_left = 433.0
offset_top = 210.0
offset_right = 585.0
offset_bottom = 277.0

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(513.885, 577.225)

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource("1")

[node name="CountLabel" type="Label" parent="."]
offset_left = 400.0
offset_top = 66.0
offset_right = 580.0
offset_bottom = 92.0
text = "Cantidad de Instancias:
"

[connection signal="button_down" from="RedGenerator" to="." method="_on_red_generator_button_down"]
[connection signal="button_down" from="VioletGenerator" to="." method="_on_violet_generator_button_down"]
